--- a/handy.html
+++ b/handy.html
@@ -13,7 +13,7 @@
   <li><a href="nagerecht.html">NIEUWS</a></li>
   <li><a href="nagerecht.html">CONTACT</a></li>
 </nav>
-
+<img src="img/heade.jpg" class="icon" alt="HTML5 Icon">
 
 </body>
 </html>
