--- a/handy.html
+++ b/handy.html
@@ -1,19 +1,28 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>handy.nl</title>	
+<meta charset="utf-8">
  <link rel="stylesheet" href="css/style.css">
  <link rel="shortcut icon" type="image/png" href="img/logo.png">
  <link href="https://fonts.google.com/specimen/Archivo?selection.family=Archivo" rel="stylesheet">
 </head>
 <body>
-<nav>
-  <li><a href="week 5.html">HOME</a></li>
-  <li><a href="voorgerecht.html">OVER ONS</a></li>
-  <li><a href="gerecht.html">PORTFOLIO</a></li>
-  <li><a href="nagerecht.html">NIEUWS</a></li>
-  <li><a href="nagerecht.html">CONTACT</a></li>
-</nav>
-<img src="img/heade.jpg" class="icon" alt="HTML5 Icon">
+<ul>
+  <li><a href="#home">HOME</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">OVER ONS</a>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+      <li><a href=#>PORTFOLIO</a></li>
+      <li><a href=#>NIEUWS</a></li>
+      <li><a href=#>CONTACT</a></li>
+    </div>
+  </li>
+</ul>
+<img src="img/header.jpg" class="icon" alt="HTML5 Icon">
 
 </body>
 </html>
