--- a/handy.html
+++ b/handy.html
@@ -8,21 +8,32 @@
  <link href="https://fonts.google.com/specimen/Archivo?selection.family=Archivo" rel="stylesheet">
 </head>
 <body>
+	<div class="container">
+	<nav>
+	<img src="img/logo.jpg" class="logo" alt="HTML5 Icon">
 <ul>
   <li><a href="#home">HOME</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">OVER ONS</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">Geschiedenis</a>
+      <a href="#">Deals</a>
+      <a href="#">Diensten</a>
       <li><a href=#>PORTFOLIO</a></li>
       <li><a href=#>NIEUWS</a></li>
       <li><a href=#>CONTACT</a></li>
-    </div>
   </li>
 </ul>
+</nav>
 <img src="img/header.jpg" class="icon" alt="HTML5 Icon">
+<div class="banner banner1" ><div class="tekst">Geschiedenis</div></div>
+<div>
+<div class="banner banner2" ><div class="tekst">Deals</div></div>
+<div class="banner banner3" ><div class="tekst">Diensten</div></div>
+</div>
+</div>
+
+
 
 </body>
 </html>
