--- a/handy.html
+++ b/handy.html
@@ -26,10 +26,11 @@
 </ul>
 </nav>
 <img src="img/header.jpg" class="icon" alt="HTML5 Icon">
+<div class="grid-container">
 <div class="banner banner1" ><div class="tekst">Geschiedenis</div></div>
-<div>
 <div class="banner banner2" ><div class="tekst">Deals</div></div>
 <div class="banner banner3" ><div class="tekst">Diensten</div></div>
+</div>
 </div>
 </div>
 
