--- a/handy.html
+++ b/handy.html
@@ -30,6 +30,10 @@
 <div class="banner banner1" ><div class="tekst">Geschiedenis</div></div>
 <div class="banner banner2" ><div class="tekst">Deals</div></div>
 <div class="banner banner3" ><div class="tekst">Diensten</div></div>
+<div class="yellowbox">
+
+	
+</div>
 </div>
 </div>
 </div>
